resized images, added photo creds

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<div class="row gtr-150">
 						<div class="col-6 col-12-medium">
 							<header class="major">
-								<h2>Welcome to my portfolio</h2>
+								<h2>Web Development Portfolio</h2>
 							</header>
 							<p>Here are a few projects I've worked on. I should add more text here so it doesn't have so much white space. Way, way more text. More text. And more. Again. Holy smokes.</p> 
 							<p>I'm running out of words to type, so I reckon I'll start a new paragraph. Cowabunga, dude. OK. Getting there. I should think of more nice things to say about myself. Well, that's close enough. Good talk. </p>
@@ -80,7 +80,8 @@
 					<p></p>
 					<div class="row gtr-150">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><a href="https://github.com/jaywood8/Sprint-Challenge--User-Interface" target="_blank"> <img src="images/diego-ph-249471-unsplash.jpg" alt="Person holding lightbulb in the sunset" /></a></span>
+							<span class="image fit"><a href="https://github.com/jaywood8/Sprint-Challenge--User-Interface" target= _blank> <img src="images/diego-ph-249471-unsplash.jpg" alt="Person holding lightbulb in the sunset" />
+							</a>Photo Credit: <a href="https://unsplash.com/@jdiegoph?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" target=_blank>Diego PH</a> on Unsplash</a></span>
 							<h3>Multi-page Website</h3>
 							<p>This Sprint demonstrated proficiency with Semantic HTML, CSS Fundamentals, CSS Flexbox Module, and Git. Also, I didn't blow anything up.</p>
 							<ul class="actions special">
@@ -88,7 +89,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><a href="https://github.com/jaywood8/UI-III-Flexbox" target= _blank><img src="images/boy-flexing.jpg" alt="Boy flexing his arms"></a></span>
+							<span class="image fit"><a href="https://github.com/jaywood8/UI-III-Flexbox" target= _blank><img src="images/boy-flexing.jpg" alt="Boy flexing his arms"></a>Photo Credit: <a href="https://unsplash.com/@benwhitephotography" target=_blank>Ben White</a> on Unsplash</a></span>
 							<h3>Using Flexbox</h3>
 							<p>I flex(boxed) so hard on this one, I was sore for a week. By the way, does that shirt look small on me?</p>
 							<ul class="actions special">
@@ -96,7 +97,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><a href="https://giphy.com/gifs/teamcoco-50-cent-i-didnt-do-it-3o7528iru3IAxAYSsw" target= _blank><img src="images/welder.jpg" alt="A welder welding" /></a></span>
+							<span class="image fit"><a href="https://giphy.com/gifs/teamcoco-50-cent-i-didnt-do-it-3o7528iru3IAxAYSsw" target= _blank><img src="images/welder.jpg" alt="A welder welding" /></a>Photo Credit: <a href="https://unsplash.com/@dwiadro" target=_blank>Daniel Wiadro</a> on Unsplash</a></span>
 							<h3>Major Weld-age</h3>
 							<p>I welded a car together with my computer. Take that, Elon Musk.</p>
 							<ul class="actions special">
